# wise-tale

./: .env.example  .gitignore  CLEANUP_REPORT.md  DEPLOYMENT-SEPARATED.md  DEPLOYMENT.md  DEPLOY_NOW.sh  Dockerfile  FINAL_DEPLOYMENT_PLAN.md  HUGGINGFACE_INTEGRATION.md  LOAD_BALANCER_SETUP.md  READ.ME  README.md  check-status.sh  deploy-backend-only.sh  deploy-backend.sh  deploy-digitalocean.sh  deploy-rsync.sh  deploy-to-digitalocean.sh  deploy.sh  dev-fast.sh  dev.sh  docker-compose.backend.yml  docker-compose.dev.yml  docker-compose.light.yml  docker-compose.prod.yml  docker-compose.prod.yml.final  docker-compose.prod.yml.final-fix  docker-compose.prod.yml.fixed  docker-compose.prod.yml.fixed-nginx  docker-compose.prod.yml.simplified  docker-compose.yml  firestore.rules  frontend_section.txt  generate-secrets.sh  manage-backend.sh  manage-prod.sh  nginx-api.conf  nginx-prod.conf  nginx-prod.conf.template  nginx.conf  (+17 more)
app/: main.py
ci/: check-env.sh
components/: auth-modal.tsx  page-loader.tsx  waitlist-form.tsx
docs/: ANALYTICS_SETUP.md  CLEANUP_REPORT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  GOOGLE_ANALYTICS_SETUP.md  GOOGLE_OAUTH_SETUP.md  IMMEDIATE_DEPLOYMENT.md  PERFORMANCE_OPTIMIZATION.md  PRODUCTION_SETUP.md
nginx/: Dockerfile  nginx.conf  nginx.conf.full_backup
scripts/: migrate-users.js  package.json
wise-tale-mirror/: config  packed-refs
wisetale-api/: .dockerignore  Dockerfile  Dockerfile.uv  pyproject.toml  requirements.txt  time-capsule-d5a66-c542dacf194a.json
wisetale-app/: .dockerignore  Dockerfile  next.config.mjs  package-lock.json  package.json  vercel.json
wisetale-landing/: Dockerfile  next.config.mjs  package-lock.json  package.json
wizetale-api/: Dockerfile  cleanup_old_files.py  gunicorn.conf.py  monitor_performance.py  pyproject.toml  setup_cleanup_cron.sh  worker.py
wizetale-api/app/: celery_utils.py  main.py  main.py.save
wizetale-api/app/api/: dependencies.py
wizetale-api/app/api/v1/: generate.py
wizetale-api/app/core/: config.py
wizetale-api/app/schemas/: task.py
wizetale-api/app/services/: firebase_service.py  pexels_service.py  redis_service.py  runware_service.py  supabase_service.py  task_service.py
wizetale-api/ci/: pycheck.sh
wizetale-app/: .dockerignore  Dockerfile  Dockerfile.prod  QUICK_START.md  STRIPE_SETUP.md  next.config.mjs  next.config.mjs.backup  (+4 more)
(+139 files in other folders)
