[project]
name = "wisetale-api"
version = "1.0.0"
description = "AI-powered educational video generation API"
readme = {text = "Wizetale API - AI-powered educational video generation", content-type = "text/plain"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.1",
    "pydantic>=2.6.3",
    "celery[redis]>=5.4.0",
    "email-validator>=2.0.0",
    "requests>=2.31.0",
    "redis>=5.0.1",
    "firebase-admin>=6.5.0",
    "ffmpeg-python>=0.2.0",
    "openai>=1.51.2",
    "azure-cognitiveservices-speech>=1.40.0",
    "python-dotenv>=1.1.1",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 
