[project]
name = "wizetale-api"
version = "1.0.0"
description = "AI-powered educational video generation API"
readme = {text = "Wizetale API - AI-powered educational video generation", content-type = "text/plain"}
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "python-dotenv",
    "celery[redis]",
    "requests",
    "google-cloud-aiplatform",
    "google-cloud-storage",
    "google-cloud-videointelligence",
    "google-cloud-texttospeech",
    "moviepy",
    "pillow",
    "python-pexels",
    "firebase-admin",
    "slowapi",
    "pydantic-settings",
    "openai",
    "azure-identity",
    "azure-cognitiveservices-speech"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 
